--- a/single-node/docker-compose.yml
+++ b/single-node/docker-compose.yml
@@ -1,4 +1,10 @@
 # Wazuh App Copyright (C) 2017, Wazuh Inc. (License GPLv2)
+networks:
+  traefik-public:
+    external: true
+  wazuh-net:
+    driver: bridge
+    
 services:
   wazuh.manager:
     image: wazuh/wazuh-manager:4.10.3
@@ -6,8 +12,8 @@ services:
     restart: always
     ulimits:
       memlock:
-        soft: -1
-        hard: -1
+        soft: 2147483648
+        hard: 2147483648
       nofile:
         soft: 655360
         hard: 655360
@@ -42,6 +48,8 @@ services:
       - ./config/wazuh_indexer_ssl_certs/wazuh.manager.pem:/etc/ssl/filebeat.pem
       - ./config/wazuh_indexer_ssl_certs/wazuh.manager-key.pem:/etc/ssl/filebeat.key
       - ./config/wazuh_cluster/wazuh_manager.conf:/wazuh-config-mount/etc/ossec.conf
+    networks:
+      - wazuh-net
 
   wazuh.indexer:
     image: wazuh/wazuh-indexer:4.10.3
@@ -53,8 +61,8 @@ services:
       - "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g"
     ulimits:
       memlock:
-        soft: -1
-        hard: -1
+        soft: 2147483648
+        hard: 2147483648
       nofile:
         soft: 65536
         hard: 65536
@@ -67,13 +75,15 @@ services:
       - ./config/wazuh_indexer_ssl_certs/admin-key.pem:/usr/share/wazuh-indexer/config/certs/admin-key.pem
       - ./config/wazuh_indexer/wazuh.indexer.yml:/usr/share/wazuh-indexer/config/opensearch.yml
       - ./config/wazuh_indexer/internal_users.yml:/usr/share/wazuh-indexer/config/opensearch-security/internal_users.yml
+    networks:
+      - wazuh-net
 
   wazuh.dashboard:
     image: wazuh/wazuh-dashboard:4.10.3
     hostname: wazuh.dashboard
     restart: always
-    ports:
-      - 443:5601
+    # ports:
+    #   - 443:5601
     environment:
       - INDEXER_USERNAME=admin
       - INDEXER_PASSWORD=SecretPassword
@@ -95,6 +105,16 @@ services:
     links:
       - wazuh.indexer:wazuh.indexer
       - wazuh.manager:wazuh.manager
+    networks:
+      - wazuh-net
+      - traefik-public
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=traefik-public"
+      - "traefik.http.routers.wazuh.rule=Host(`wazuh.mercer-technologies.com`)"
+      - "traefik.http.routers.wazuh.entrypoints=websecure"
+      - "traefik.http.routers.wazuh.tls.certresolver=myresolver"
+      - "traefik.http.services.wazuh.loadbalancer.server.port=5601"
 
 volumes:
   wazuh_api_configuration:
