--- a/single-node/docker-compose.yml
+++ b/single-node/docker-compose.yml
@@ -9,7 +9,7 @@ services:
   wazuh.manager:
     image: wazuh/wazuh-manager:4.10.3
     hostname: wazuh.manager
-    restart: always
+    restart: unless-stopped
     ulimits:
       memlock:
         soft: 2147483648
@@ -17,11 +17,11 @@ services:
       nofile:
         soft: 655360
         hard: 655360
-    ports:
-      - "1514:1514"
-      - "1515:1515"
-      - "514:514/udp"
-      - "55000:55000"
+    # ports:
+    #   - "1514:1514"
+    #   - "1515:1515"
+    #   - "514:514/udp"
+    #   - "55000:55000"
     environment:
       - INDEXER_URL=https://wazuh.indexer:9200
       - INDEXER_USERNAME=admin
@@ -54,9 +54,9 @@ services:
   wazuh.indexer:
     image: wazuh/wazuh-indexer:4.10.3
     hostname: wazuh.indexer
-    restart: always
-    ports:
-      - "9200:9200"
+    restart: unless-stopped
+    # ports:
+    #   - "9200:9200"
     environment:
       - "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g"
     ulimits:
@@ -81,7 +81,7 @@ services:
   wazuh.dashboard:
     image: wazuh/wazuh-dashboard:4.10.3
     hostname: wazuh.dashboard
-    restart: always
+    restart: unless-stopped
     # ports:
     #   - 443:5601
     environment:
